--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notatnik v1</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
 </head>
 <body>
     <div class="container">
         <textarea name="textarea" id="noteArea" placeholder="Wprowadź notatkę..."></textarea>
         <button id="saveButton">zapisz</button>
         <button id="clearButton">usuń</button>
+        <button id="savePdf">zapisz do pdf</button>
     </div>
-
     <script src="app.js"></script>
 </body>
 </html>
